Slides are covering the screen PERFECTLY, fixing icons on button..

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
 }
+/*img { 
+  display: block;
+  width: auto; 
+  height: auto; 
+  max-width: 100%; 
+}*/
 /* FOR SLIDES */
 
 /*
@@ -38,17 +44,17 @@ these make the slideshow work
 Buttons appearance
 */
 .controls{
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    height: 50px;
+    width: 50px;
+    z-index: 3;
+    outline: none;
     background-color: silver;
     border-radius: 50%;
     border: 1px solid white;
     color: white;
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    bottom: 5%;
-    right: 5%;
-    z-index: 3;
-    outline: none;
     box-shadow: 0 3px 0 white;
 }
 .controls:active {
@@ -66,29 +72,58 @@ Slides appearance
 	background: #333;
 	color: #fff;
 }
-
+/*
 .slide:nth-of-type(1){
 	background: url(Slide0.png) no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
 }
 .slide:nth-of-type(2){
-	background: url(Slide1.png) no-repeat;
+	background: url(Slide1.png)no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
 }
 .slide:nth-of-type(3){
-	background: url(Slide2.png) no-repeat;
+	background: url(Slide2.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
 }
 .slide:nth-of-type(4){
-	background: url(Slide3.png) no-repeat;
+	background: url(Slide3.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
 }
 .slide:nth-of-type(5){
-	background: url(Slide4.png) no-repeat;
+	background: url(Slide4.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
+}*/
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+  max-width: 100vw;
+  max-height: 100vh;
 }
